Alterei a Tela de Login e CadastroActivity

--- a/app/src/main/res/layout/activity_tela_entrada.xml
+++ b/app/src/main/res/layout/activity_tela_entrada.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".Tela_entrada">
 
     <Button
@@ -14,14 +15,14 @@
         app:backgroundTint="#FFC107"
         tools:layout_editor_absoluteX="123dp"
         tools:layout_editor_absoluteY="226dp"
-        android:textColor = "@color/Green_dark"/>
+        android:textColor = "@color/green_dark"/>
 
     <Button
         android:id="@+id/botão_cadastro2"
         android:layout_width="166dp"
         android:layout_height="74dp"
         app:backgroundTint="#FFC107"
-        android:textColor = "@color/Green_dark"
+        android:textColor = "@color/green_dark"
         android:text="Login"
 
         tools:layout_editor_absoluteX="137dp"
@@ -30,5 +31,4 @@
 
 
 
- <androidx.constraintlayout.widget.ConstraintLayout/>
-
+ </LinearLayout>
