--- a/app/src/main/res/layout/activity_cadastro.xml
+++ b/app/src/main/res/layout/activity_cadastro.xml
@@ -13,7 +13,7 @@
         android:id="@+id/imageView"
         android:layout_width="68dp"
         android:layout_height="68dp"
-        android:marginTop="20dp"
+        android:layout_marginTop="20dp"
 
         android:onClick="tirarfoto"
         app:srcCompat="@drawable/ic_launcher_background" />
@@ -22,7 +22,7 @@
         android:id="@+id/Nometitle"
         android:layout_width="49dp"
         android:layout_height="wrap_content"
-        android:marginTop="20dp"
+        android:layout_marginTop="20dp"
         android:text="Nome" />
 
 
@@ -38,7 +38,7 @@
         android:id="@+id/emailtitle"
         android:layout_width="58dp"
         android:layout_height="wrap_content"
-        android:marginTop="20dp"
+        android:layout_marginTop="20dp"
         android:text="Email" />
 
     <EditText
@@ -52,7 +52,7 @@
         android:id="@+id/SenhaTitle"
         android:layout_width="43dp"
         android:layout_height="wrap_content"
-        android:marginTop="20dp"
+        android:layout_marginTop="20dp"
         android:text="Senha" />
 
     <EditText
@@ -67,7 +67,7 @@
         android:id="@+id/Telefone_title"
         android:layout_width="68dp"
         android:layout_height="wrap_content"
-        android:marginTop="20dp"
+        android:layout_marginTop="20dp"
         android:text="Telefone" />
 
     <EditText
@@ -82,7 +82,7 @@
         android:id="@+id/Área_AgricolaTitle"
         android:layout_width="109dp"
         android:layout_height="wrap_content"
-        android:marginTop="20dp"
+        android:layout_marginTop="20dp"
         android:text="Area_Agricola" />
 
     <EditText
@@ -95,7 +95,7 @@
         android:id="@+id/Salvar1"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:marginTop="40dp"
+        android:layout_marginTop="40dp"
         android:onClick="salvar1click"
         android:text="Salvar"
 
