--- a/app/src/main/res/layout/activity_timeline.xml
+++ b/app/src/main/res/layout/activity_timeline.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="Horiontal"
+    android:orientation="vertical"
     tools:context=".TimelineActivity">
 
 
@@ -12,7 +12,6 @@
         android:id="@+id/Dicas"
         android:layout_width="match_parent"
         android:layout_height="61dp"
-        android:layout_weight="150dp"
         android:text="Dicas" />
 
 </LinearLayout>
