Alterei a Tela: Tela_entrada

--- a/app/src/main/res/layout/activity_tela_entrada.xml
+++ b/app/src/main/res/layout/activity_tela_entrada.xml
@@ -12,18 +12,20 @@
         android:layout_width="192dp"
         android:layout_height="68dp"
         android:text="Cadastro"
+        android:onClick =  "Cadastro"
         app:backgroundTint="#FFC107"
         tools:layout_editor_absoluteX="123dp"
         tools:layout_editor_absoluteY="226dp"
         android:textColor = "@color/green_dark"/>
 
     <Button
-        android:id="@+id/botão_cadastro2"
+        android:id="@+id/botão_Login"
         android:layout_width="166dp"
         android:layout_height="74dp"
         app:backgroundTint="#FFC107"
         android:textColor = "@color/green_dark"
         android:text="Login"
+        android:onClick =  "Login"
 
         tools:layout_editor_absoluteX="137dp"
         tools:layout_editor_absoluteY="433dp" />
