--- a/app/src/main/res/layout/activity_timeline.xml
+++ b/app/src/main/res/layout/activity_timeline.xml
@@ -14,4 +14,20 @@
         android:layout_height="61dp"
         android:text="Dicas" />
 
+    <Button
+        android:id="@+id/opções"
+        android:layout_width="match_parent"
+        android:layout_height="61dp"
+        android:text="Dicas" />
+
+
+        />
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id = "@+id/fab"
+        android:layout_width = "wrap_content"
+        android:layout_height = "wrap_content"
+        android:layout_gravity = "bottom|end"
+        android:layout_margin = "16dp"
+        app:srcCompat = "@drawable/ic_add"/>
+
 </LinearLayout>
