--- a/app/src/main/res/layout/activity_cadastro.xml
+++ b/app/src/main/res/layout/activity_cadastro.xml
@@ -29,6 +29,7 @@
     <EditText
         android:id="@+id/Nomebarra"
         android:layout_width="200dp"
+        android:inputType="text"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:text=" " />
@@ -44,6 +45,7 @@
     <EditText
         android:id="@+id/emailbarra"
         android:layout_width="200dp"
+        android:inputType="textEmailAddress"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp" />
 
@@ -58,9 +60,9 @@
     <EditText
         android:id="@+id/Senhabarra"
         android:layout_width="200dp"
+        android:inputType="numberPassword"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:text=" " />
+        android:layout_marginStart="8dp" />
 
 
     <TextView
@@ -73,9 +75,9 @@
     <EditText
         android:id="@+id/tel_barra"
         android:layout_width="200dp"
+        android:inputType="phone"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:text=" " />
+        android:layout_marginStart="8dp" />
 
 
     <Button
