--- a/app/src/main/res/layout/activity_timeline.xml
+++ b/app/src/main/res/layout/activity_timeline.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,7 +7,12 @@
     android:orientation="vertical"
     tools:context=".TimelineActivity">
 
+    <ExpandableListView
+        android:id="@+id/expListView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
+<!--
     <Button
         android:id="@+id/Dicas"
         android:layout_width="match_parent"
@@ -20,7 +25,7 @@
         android:layout_height="61dp"
         android:text="Dicas" />
 
-
+-->
         />
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id = "@+id/fab"
@@ -30,4 +35,4 @@
         android:layout_margin = "16dp"
         app:srcCompat = "@drawable/ic_add"/>
 
-</LinearLayout>
+</FrameLayout>
