--- a/app/src/main/res/layout/activity_cadastro.xml
+++ b/app/src/main/res/layout/activity_cadastro.xml
@@ -1,22 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="10dp"
-    android:orientation="vertical"
+    android:background="@color/white"
     tools:context=".CadastroActivity">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="68dp"
+        android:layout_width="60dp"
         android:layout_height="68dp"
         android:layout_marginTop="20dp"
-
         android:onClick="tirarfoto"
-        app:srcCompat="@drawable/ic_launcher_background" />
+        app:srcCompat="@drawable/ic_icone" />
 
     <TextView
         android:id="@+id/Nometitle"
@@ -87,8 +90,8 @@
         android:layout_marginTop="40dp"
         android:onClick="salvar1click"
         android:text="Salvar"
-
         app:backgroundTint="#FFC107" />
 
+    </LinearLayout>
 
-</LinearLayout>
+</ScrollView>
