--- a/app/src/main/res/layout/list_item_subgroup.xml
+++ b/app/src/main/res/layout/list_item_subgroup.xml
@@ -15,6 +15,7 @@
             android:id="@+id/imgFoto"
             android:layout_width="42dp"
             android:layout_height="42dp"
+            android:src="@drawable/ic_icone"
             android:layout_gravity="end" />
 
         <LinearLayout
@@ -36,7 +37,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:text="Marcos "
-                android:textColor="@color/black"
+                android:textColor="@color/green_dark"
                 android:textSize="18dp" />
 
 
