adicionado titulo e nova fonte

--- a/app/src/main/res/layout/activity_nova_msg.xml
+++ b/app/src/main/res/layout/activity_nova_msg.xml
@@ -9,6 +9,16 @@
     android:orientation="vertical"
     tools:context=".NovaMsgActivity">
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/algerian_regular"
+            android:gravity="center"
+            android:text="@string/app_name"
+            android:textColor="@color/black"
+            android:textSize="36sp" />
+
+
 
         <TextView
             android:layout_width="match_parent"
