--- a/app/src/main/res/layout/activity_cadastro.xml
+++ b/app/src/main/res/layout/activity_cadastro.xml
@@ -13,84 +13,102 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="60dp"
-        android:layout_height="68dp"
-        android:layout_marginTop="20dp"
-        android:onClick="tirarfoto"
-        app:srcCompat="@drawable/ic_icone" />
-
-    <TextView
-        android:id="@+id/Nometitle"
-        android:layout_width="49dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text="Nome" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:orientation="horizontal">
 
 
-    <EditText
-        android:id="@+id/Nomebarra"
-        android:layout_width="200dp"
-        android:inputType="text"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:text=" " />
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="60dp"
+                android:layout_height="68dp"
+                android:onClick="tirarfoto"
+                app:srcCompat="@drawable/ic_icone" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:fontFamily="@font/algerian_regular"
+                android:gravity="center"
+                android:text="@string/app_name"
+                android:textColor="@color/black"
+                android:textSize="36sp" />
+
+        </LinearLayout>
 
 
-    <TextView
-        android:id="@+id/emailtitle"
-        android:layout_width="58dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text="Email" />
-
-    <EditText
-        android:id="@+id/emailbarra"
-        android:layout_width="200dp"
-        android:inputType="textEmailAddress"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp" />
+        <TextView
+            android:id="@+id/Nometitle"
+            android:layout_width="49dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:text="Nome" />
 
 
-    <TextView
-        android:id="@+id/SenhaTitle"
-        android:layout_width="43dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text="Senha" />
-
-    <EditText
-        android:id="@+id/Senhabarra"
-        android:layout_width="200dp"
-        android:inputType="numberPassword"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp" />
+        <EditText
+            android:id="@+id/Nomebarra"
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:inputType="text"
+            android:text=" " />
 
 
-    <TextView
-        android:id="@+id/Telefone_title"
-        android:layout_width="68dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text="Telefone" />
+        <TextView
+            android:id="@+id/emailtitle"
+            android:layout_width="58dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:text="Email" />
 
-    <EditText
-        android:id="@+id/tel_barra"
-        android:layout_width="200dp"
-        android:inputType="phone"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp" />
+        <EditText
+            android:id="@+id/emailbarra"
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:inputType="textEmailAddress" />
 
 
-    <Button
-        android:id="@+id/Salvar1"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:onClick="salvar1click"
-        android:text="Salvar"
-        app:backgroundTint="#FFC107" />
+        <TextView
+            android:id="@+id/SenhaTitle"
+            android:layout_width="43dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:text="Senha" />
+
+        <EditText
+            android:id="@+id/Senhabarra"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:inputType="numberPassword" />
+
+
+        <TextView
+            android:id="@+id/Telefone_title"
+            android:layout_width="68dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:text="Telefone" />
+
+        <EditText
+            android:id="@+id/tel_barra"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:inputType="phone" />
+
+
+        <Button
+            android:id="@+id/Salvar1"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
+            android:onClick="salvar1click"
+            android:text="Salvar"
+            app:backgroundTint="#FFC107" />
 
     </LinearLayout>
 
