--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,17 +9,28 @@
     android:orientation="vertical"
     tools:context=".LoginActivity">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/algerian_regular"
+        android:gravity="center"
+        android:layout_marginTop="20dp"
+        android:text="@string/app_name"
+        android:textColor="@color/black"
+        android:textSize="36sp" />
+
+
 
     <TextView
         android:id="@+id/emailtitle"
         android:layout_width="58dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="40dp"
         android:text="Email" />
 
     <EditText
         android:id="@+id/emailbarra"
-        android:layout_width="200dp"
+        android:layout_width="250dp"
         android:inputType="textEmailAddress"
         android:layout_height="wrap_content" />
 
@@ -32,7 +43,7 @@
 
     <EditText
         android:id="@+id/Senhabarra"
-        android:layout_width="200dp"
+        android:layout_width="250dp"
         android:inputType="numberPassword"
         android:layout_height="wrap_content"
         android:text="" />
