--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,10 +5,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:layout_margin="16dp"
     android:background="@color/white"
     tools:context=".MainActivity">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/algerian_regular"
+        android:text="@string/app_name"
+        android:gravity="center"
+        android:textSize="36sp"
+        android:textColor="@color/black"/>
+
     <Button
+        android:layout_marginTop="20dp"
         android:id="@+id/botão_cadastro"
         android:layout_width="192dp"
         android:layout_height="68dp"
