--- a/app/src/main/res/layout/list_item_subgroup.xml
+++ b/app/src/main/res/layout/list_item_subgroup.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="5dp"
+    android:layout_margin="10dp"
     android:background="#FEFEFE"
     android:orientation="vertical">
 
@@ -37,7 +37,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
-                android:text="Marcos "
+                android:text="--- "
                 android:textColor="@color/green_dark"
                 android:textSize="18dp" />
 
